# AirTrain

./: .gitignore  LICENSE  README.md  pyproject.toml
airtrain/: __init__.py  cli.py  compat.py  config.py
airtrain/dashboard/: __init__.py  app.py
airtrain/dashboard/static/: index.html
airtrain/discovery/: __init__.py  mdns.py  peer.py  relay.py
airtrain/engine/: __init__.py  autopsy.py  checkpoint.py  coordinator.py  diloco.py  dream.py  marketplace.py  pipeline.py  sleep.py  status.py  trainer.py  worker.py
airtrain/models/: __init__.py  registry.py  transformer.py
airtrain/network/: __init__.py  compression.py  protocol.py  transport.py
docs/: index.html
examples/: airtrain_cli.py  demo_coordinator.py  demo_worker.py  dream.py  relay_demo.py  train_gpt2.py  train_mnist.py
tests/: test_config.py  test_protocol.py
