[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airtrain"
version = "0.1.0"
description = "Distributed ML training across Apple Silicon Macs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "AirTrain Contributors" }]
keywords = ["machine-learning", "distributed-training", "apple-silicon", "mlx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "zeroconf>=0.131.0",
    "safetensors>=0.4.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
mlx = [
    "mlx>=0.4.0",
]
website = [
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "authlib>=1.3.0",
    "itsdangerous>=2.1.0",
    "jinja2>=3.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.scripts]
airtrain = "airtrain.cli:cli"

[project.urls]
Homepage = "https://github.com/airtrain-ml/airtrain"
Documentation = "https://airtrain.dev"
Repository = "https://github.com/airtrain-ml/airtrain"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
